<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NOTEPAD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">OR</string>
    <string name="delete">DELETE</string>
    <string name="save">save</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="update">UPDATE</string>
    <string name="enter_note_description">Enter note description</string>
    <string name="untitled">Untitled</string>
    <string name="create_your_new_note">Create Your New Note....</string>
    <string name="todo">TODO</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_password_again">Enter your Password again</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="signup">SIGNUP</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
</resources>