<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddNewNoteFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey"
        android:hint="@string/untitled"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <!--edit text for note description-->
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="556dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:gravity="start|top"
        android:hint="@string/enter_note_description"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/grey"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <!--button for saving and updating a note-->



</LinearLayout>