<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.NoteFragment"
    android:id="@+id/fragment_note">

    <EditText
        android:id="@+id/title1"
        android:layout_width="400dp"
        android:layout_height="54dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:backgroundTint="@color/grey"
        android:hint="Title"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/description1"
        android:layout_width="399dp"
        android:layout_height="610dp"
        android:layout_below="@id/title1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="5dp"
        android:background="@color/black"
        android:gravity="start|top"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_out"
        tools:ignore="MissingConstraints,RelativeOverlap" />

    <LinearLayout
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/description1"
        android:layout_marginStart="250dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/delete"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/description1"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/update"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

    </LinearLayout>
</RelativeLayout>